@@ -6,7 +6,9 @@
     * FIX: fix configuration of explicit SNMP community, allow unicode
     * FIX: avoid invalid cache of 2nd and up hosts in bulk inventory
     * FIX: fixed error handling in SNMP scan, inventory check fails now
-       if SNMP agent is not responding
+           if SNMP agent is not responding
+    * Automatically remove duplicate checks when monitoring with Agent+SNMP
+       at the same time. TCP based ones have precedence.
     * inventory check of SNMP devices now does scan per default (configurable)
 
     Multisite:
